makefile and refactor
